traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: '(' expected but identifier found.
       else if get(Y)%2 == 0
               ^TraversalZigZag:19: error: ';' expected but 'else' found.
       else
       ^